# ChangeLog for net-analyzer/cucumber-nagios
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cucumber-nagios-0.6.7 (16 Feb 2010)

  16 Feb 2010; Hans de Graaff <graaff@gentoo.org>
  +cucumber-nagios-0.6.7.ebuild, +metadata.xml:
  Initial import.
