@@ -2,13 +2,14 @@
 Hash: SHA1
 
 DIST cucumber-nagios-0.6.7.gem 11776 RMD160 a3d6425627799429e87bb725becd67aaf011f533 SHA1 ab7482fcc0b35f20a784ee14a410d55e09d2a584 SHA256 2a145623bee3ddf8c4ab3fe74ab5a413203725c0be87a18ec051ce0dc243feb7
+EBUILD cucumber-nagios-0.6.7-r1.ebuild 978 RMD160 fceabd0232b18ef1f19746338330303703f9af5a SHA1 ee6eb65d36fc13832d8c2bff5993a7cbe6ea7087 SHA256 61e6b23ae782ac4262736613be5c70696bb914247b21e18fa502f5f5ef578ad5
 EBUILD cucumber-nagios-0.6.7.ebuild 721 RMD160 3c04bcf69a067aa9ab34f9e2b21119555bbe971a SHA1 6716ab0db0359fa66eddbf532386adddc0ca8212 SHA256 a5c32918d5ff2b7bfb9c1a2bbcecf609e0c56bafc51a47749db52a6c56267b4a
-MISC ChangeLog 284 RMD160 d38b24919e99fb25287983c1920c8ee60c414ac8 SHA1 ee98074083fe7570ee8cd377aa607b54490358da SHA256 35ad3d1a0fb4aa350f2226bf5658f3c2711a49f7cdc80af1746538ed9d16ad4d
+MISC ChangeLog 484 RMD160 041ffefa7df4cacae8febfe2c5940ff28c3d311b SHA1 09419fb89d1a5f6941b3585bb9a2c90d886f0a66 SHA256 030e406bd4e0a5ee43d22709ab8c69820f3e0d03552ecd46c0c0ee5ed5acae84
 MISC metadata.xml 215 RMD160 682b22c57f2f17c789b244e2bb32fe15ca3fa332 SHA1 ccf017e39c3f44ac4b557da94f91096555cb1be2 SHA256 c058515dd6264789274b580e999ce4fbbb5c53c36a452bf7b32fd227980abcf8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkt6hD8ACgkQeM7EJeUH71NH2wCfQmEgV8+vzId3P9XTcpo2ksKk
-FX8AnjLe1Z7ebLeGOcDlmpNHKZDeRvGF
-=z4NW
+iEYEARECAAYFAkuC7t4ACgkQeM7EJeUH71NRtACcC9ZFKvJvWD5YlfG4IsTpC77s
+SjgAniVaBQrjfsglIcvHjfYyK01pUq7T
+=sQyn
 -----END PGP SIGNATURE-----
