@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cucumber-nagios-0.6.7-r1 (22 Feb 2010)
+
+  22 Feb 2010; Hans de Graaff <graaff@gentoo.org>
+  +cucumber-nagios-0.6.7-r1.ebuild, metadata.xml:
+  Make sure the scripts for the generator are executable.
+
 *cucumber-nagios-0.6.7 (16 Feb 2010)
 
   16 Feb 2010; Hans de Graaff <graaff@gentoo.org>
